--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         }
       },
       "description": "Join us for a day of sharing travel suggestions, tips, and experiences. Whether you're a seasoned traveler or just starting your journey, you'll find inspiration and valuable insights from fellow adventurers.",
-      "image": "https://example.com/riga-travel-event.jpg"
+      "image": "https://st2.depositphotos.com/3725083/5485/i/450/depositphotos_54856347-stock-photo-travel-the-world-monument-concept.jpg"
     }
     </script>
 </head>
